--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,10 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+    }
 
+    .grid-container > * {
+        margin-bottom: 10px;
     }
 
     .Navbar p {
@@ -53,8 +56,8 @@
 
     }
 
-    .Navbar{
-        justify-content: space-between ;
+    .Navbar {
+        justify-content: space-between;
     }
 }
 
