--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,14 @@
     margin: 20px 0;
     display: flex !important;
     justify-content: center;
+    position: fixed;
+    right: 5px;
+    bottom: 5px;
+    opacity: .2;
+}
+
+.btn:hover {
+    opacity: 1;
 }
 
 .pgnUp {
