--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,11 @@
 }
 
 .btn {
-    margin: 20px 0;
     display: flex !important;
     justify-content: center;
     position: fixed;
     right: 5px;
-    bottom: 5px;
+    bottom: 1rem;
     opacity: .2;
 }
 
