--- a/src/components/FilterBar/style.css
+++ b/src/components/FilterBar/style.css
@@ -1,7 +1,8 @@
 .toggleBtn-container {
-    margin-bottom: 5px;
     position: fixed;
     bottom: 1rem;
+    left: 5px;
+    z-index: 99;
 }
 
 .toggleBtn {
@@ -13,4 +14,8 @@
 
 .toggleBtn:hover{
     opacity: 1;
+}
+
+.radio-group > * {
+    margin-left: 0 !important;
 }
